@@ -4,6 +4,10 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V1.3.8 build 2019-04-12
+1、新增同时支持fsockopen及stream_socket_client发送邮件；
+2、优化邮件发送失败错误提示信息；
+
 PbootCMS V1.3.7 build 2019-03-12
 1、修复部分情况数据库语句执行发生的错误不能正常显示的问题；
 2、修复搜索时表单传递字段控制被过滤掉的问题；
